
  [ Oleksandr Shneyder ]
  * New upstream release (4.0.3.2):
    - Reformat onmainwindow.cpp
    - Fix placement of session folders in session card column. (Fixes: #681).

  [ Mike Gabriel ]
  * New upstream release (4.0.3.2):
    - Provide empty Turkish translation file.
    - Add several info/error/debug log message while hunting down #702.

  [ Jason Alavaliant ]
  * New upstream verson (4.0.3.2):
    - Use QUrl::toPercentEncoding() method to properly encode passwords sent
      to X2Go Session Broker. (Fixes: #705).

  [ Mike DePaulo ]
  * New upstream release (4.0.3.2):
    - Windows: Fix compatibility with PulseAudio 6.0
    - Windows: Enable X2Go Client for Windows to build under VS2010 nmake
      (but not the VS2010 IDE due to a Qt4 Visual Studio Add-in limitation)
      Note that the official builds are still build under MinGW.
      (Fixes: #642)
      Thanks George Trakatelis (uom.edu.gr) for submitting this feature.

  [ Kaan Ozdincer ]
  * New upstream version (4.0.3.2):
    - Add Turkish translation file.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 27 Nov 2014 12:01:43 +0100

x2goclient (4.0.3.1-0x2go1) unstable; urgency=medium

  [ Mike Gabriel ]
  * New upstream release (4.0.3.1):
    - Fully rework x2goclient man page. Add many options that haven't been
      documented so far.
    - Make sound options configurable via X2Go Session Broker. (Fixes: #652).
    - Fix (cross-user) desktop sharing since introduction of clipboard mode
      feature.
    - Update several translation files after splitting of session profile's
      "Settings" tab into "Input/Output" and "Media". Translations for these
      two new tabs derived from the i18n files of PyHoca-GUI.

  [ Mark Pedersen-Cook ]
  * New upstream release (4.0.3.1):
    - Update Danish translation file.

  [ Oleksandr Shneyder ]
  * New upstream release (4.0.3.1):
    - Split Sessions config widget into Input/output and Media widgets.
      (Fixes: #643).
